# strumok

./: .gitignore  .nvim.lua  CHANGELOG.md  README.en.md  README.md  analysis_options.yaml  encode_secrets.sh  l10n.yaml  pubspec.yaml
.github/workflows/: build-android.yaml  build-linux.yaml  build-on-tag.yaml  build-prerelease.yaml  build-windows.yaml  build.yaml  create-release.yaml  linux-package-list.txt  release-on-tag.yaml  release.yaml  upload-release.yaml
.packaging/snap/: snapcraft.yaml
.packaging/windows/: strumok.iss
_packaging/windows/: strumok.iss
android/: gradle.properties  keystore.properties
android/app/: build.gradle  build.gradle.kts  create_keystore.sh
content_suppliers_api/: pubspec.yaml
content_suppliers_api/lib/: model.dart  segmented_list.dart
content_suppliers_dart/lib/: bundle.dart
content_suppliers_rust/: analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
content_suppliers_rust/lib/: bundle.dart
content_suppliers_rust/rust/: Cargo.toml
content_suppliers_rust/rust/src/: frb_generated.rs
content_suppliers_rust/rust/src/api/: mod.rs
content_suppliers_rust/rust/src/suppliers/: dummy.rs  mod.rs
content_suppliers_rust/test/: bundle_test.dart
lib/: app_database.dart  app_init_firebase.dart  app_localizations.dart  app_preferences.dart  app_router.dart  app_router.gr.dart  app_secrets.dart  main.dart
lib/auth/: auth.dart  auth_icon.dart  auth_provider.dart  auth_provider.g.dart  profile_navigation_dest.dart  user_dialog.dart
lib/collection/: collection_provider.dart  (+11 more)
linux/: CMakeLists.txt  my_application.cc
(+246 files in other folders)
