[package]
name = "content_suppliers_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1.0.102"
enum_dispatch = "0.3.13"
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = "0.28.0"
